Prevent overflowing the body element

--- a/styles/top-logo.css
+++ b/styles/top-logo.css
@@ -1,6 +1,6 @@
 .top-logo {
   max-width: 100%;
-  margin: 3.45em 1em 1em;
+  padding: 3.45em 1em 1em;
   text-align: center;
 }
 
